modificacion de rutas

--- a/Pages/Noticias.html
+++ b/Pages/Noticias.html
@@ -52,19 +52,19 @@
 
                         <li class="nav-item">
 
-                            <a class="nav-link" href="../pages/Servicios.html">Servicios</a>
+                            <a class="nav-link" href="../Pages/Servicios.html">Servicios</a>
 
                         </li>
 
                         <li class="nav-item">
 
-                            <a class="nav-link" href="../pages/Noticias.html">Noticias</a>
+                            <a class="nav-link" href="../Pages/Noticias.html">Noticias</a>
 
                         </li>
 
                         <li class="nav-item">
 
-                            <a class="nav-link" href="../pages/Contacto.html">Contacto</a>
+                            <a class="nav-link" href="../Pages/Contacto.html">Contacto</a>
 
                         </li>
 
