--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!--icon-->
   <link rel="icon" type="image/x-icon" href="./Images.img/favicon.ico">
   <!--Main CSS-->
-  <link rel="stylesheet" href="./CSS/styles.css">
+  <link rel="stylesheet" href="./SCSS/Styles.scss">
 </head>
 
 <br>
