--- a/Pages/Noticias.html
+++ b/Pages/Noticias.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Exo+2:wght@500&display=swap" rel="stylesheet">
     <!--icon-->
     <link rel="icon" type="image/x-icon" href="../Images.img/favicon.ico">
-    <link rel="stylesheet" href="../CSS/Styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
