--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!--icon-->
   <link rel="icon" type="image/x-icon" href="./Images.img/favicon.ico">
   <!--Main CSS-->
-  <link rel="stylesheet" href="./CSS/Styles.css">
+  <link rel="stylesheet" href="./CSS/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
